--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_baseline_search_24"
         android:title=""/>
 
+    <item android:id="@+id/nav_add"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title=""/>
+
     <item android:id="@+id/nav_bookmarks"
         android:icon="@drawable/ic_baseline_bookmark_border_24"
         android:title=""/>
