--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New to Instagram? Register"
+        android:text="New to Memorizor? Register"
         android:layout_marginTop="15dp"
         android:id="@+id/register_user"/>
 
