--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -13,8 +13,8 @@
         android:id="@+id/image_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:src="@drawable/icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="0dp"
         android:maxLines="1"
         android:text="Full Name"
         app:layout_constraintStart_toEndOf="@+id/image_profile"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
         android:maxLines="1"
         android:text="username"
         android:textColor="@color/design_default_color_primary_dark"
@@ -49,7 +49,7 @@
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="60dp"
         android:maxLines="1"
         android:text="Course Title"
         android:textColor="@color/design_default_color_primary_dark"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="80dp"
         android:maxWidth="200dp"
         android:maxLines="2"
         android:text="Course description this text is longer ..."
@@ -85,9 +85,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="120dp"
         android:text="Buy Course"
         app:layout_constraintStart_toEndOf="@+id/image"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/btn_bookmark"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="27dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="340dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/ic_baseline_bookmark_border_24"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -95,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="132dp"
         android:maxWidth="200dp"
         android:text="$20.00"
         app:layout_constraintStart_toEndOf="@+id/btn_buy"
