implemented bookmark page functionality

--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.BookmarksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_courses_bookmarked"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Bookmarks fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
