--- a/app/src/main/res/layout/video_upload_item.xml
+++ b/app/src/main/res/layout/video_upload_item.xml
@@ -6,7 +6,7 @@
     android:padding="10dp">
 
     <VideoView
-        android:id="@+id/video_view"
+        android:id="@+id/video_upload_view"
         android:layout_width="410dp"
         android:layout_height="198dp"
         app:layout_constraintEnd_toEndOf="parent"
