--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -34,7 +34,7 @@
     <TextView
         android:id="@+id/description"
         android:layout_width="367dp"
-        android:layout_height="135dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="128dp"
         android:maxWidth="200dp"
