--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="10dp">
 
@@ -65,8 +65,8 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="139dp"
+        android:layout_height="36dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="80dp"
         android:maxWidth="200dp"
@@ -100,7 +100,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="27dp"
         android:layout_height="47dp"
-        android:layout_marginStart="340dp"
+        android:layout_marginStart="320dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/ic_baseline_bookmark_border_24"
         app:layout_constraintStart_toStartOf="parent"
