--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="350dp"
         app:cardElevation="10dp"
         app:cardCornerRadius="5dp"
@@ -58,7 +58,7 @@
             android:layout_width="27dp"
             android:layout_height="47dp"
             android:layout_marginTop="200dp"
-            android:layout_marginStart="330dp"
+            android:layout_marginStart="270dp"
             android:src="@drawable/ic_baseline_bookmark_border_24"
             />
 
