--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         app:cardElevation="10dp"
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/white"
@@ -18,22 +18,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/fullname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="225dp"
-            android:layout_marginStart="10dp"
-            android:maxLines="1"
-            android:text="username"
-            android:textColor="@color/design_default_color_primary_dark"
-            android:textStyle="italic" />
+
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center|top"
+            android:scaleType="fitXY"
             android:src="@drawable/icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,6 +43,16 @@
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/fullname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="230dp"
+            android:layout_marginStart="10dp"
+            android:maxLines="1"
+            android:text="Full Name"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textStyle="italic" />
 
         <ImageButton
             android:id="@+id/btn_bookmark"
@@ -66,7 +68,7 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
+            android:layout_marginTop="250dp"
             android:layout_marginStart="10dp"
             android:stepSize="1"
             android:numStars="5"
@@ -83,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="260dp"
+            android:layout_marginTop="275dp"
             android:maxWidth="200dp"
             android:text="$20.00" />
 
