--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -5,12 +5,20 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="ceva"
+        android:text="#hashtag"
         android:padding="10dp"
         android:id="@+id/tv_hashtag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_child"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/tv_hashtag" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
