--- a/app/src/main/res/drawable/et_bg.xml
+++ b/app/src/main/res/drawable/et_bg.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp"/>
+    <solid android:color="@color/white"/>
     <stroke android:width="2dp"
         android:color="#D3D3D3"/>
 
