--- a/app/src/main/res/drawable/vie_bg.xml
+++ b/app/src/main/res/drawable/vie_bg.xml
@@ -4,7 +4,7 @@
 
     <solid android:color="@color/white"/>
 
-    <corners android:topLeftRadius="40dp" android:topRightRadius="40dp"/>
+    <corners android:topLeftRadius="40dp" android:topRightRadius="40dp" android:bottomLeftRadius="40dp" android:bottomRightRadius="40dp"/>
 
 
 
